# rlfs

./: CMakeLists.txt  README.md
bbfs/: bbfsop.hpp  config.h  log.h
docs/: main.tex  main.xdv  makefile  setup.tex
docs/assets/: install-pkgs  notes-preface.tex  readme  sticky-preface.tex
scripts/: fuse2env  install-deps.sh  install-rlfs.sh  plotperf.py  tarme.sh
src/: rlfsc.c  rlfsd.c
src/include/: rlfs.h  rlfsop.hpp  util.hpp
